Hold references to zone IDs alive during use

Restore holding of a getID() call's return in a QJNIObjectPrivate
eliminated in commit 78cde1bfd94521bbe4972f31a79c959d0990ea77; this
keeps the Java internal object alive for its lifetime, where it might
otherwise be garbage-collected before we're done with it.

Fixes: QTBUG-88610
Change-Id: Id65b059012f7bd3377a6562c1b647feb75a13679
Reviewed-by: BogDan Vatra <bogdan@kdab.com>
(cherry picked from commit d5eda37baaea20b2411b6ef1ca0d41a2a71a06a6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>